--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header class="hol-Header" role="banner">
         <div class="hol-Header-wrap">
-            <div class="hol-Header-logo"><span>Configure Vanity URL for HCM Instance</span></div>
+            <div class="hol-Header-logo"><span>Configure Vanity URL for ORC Career Site</span></div>
             <div class="hol-Header-actions">
                 <button id="openNav" class="hol-Header-button hol-Header-button--menu rightNav" aria-label="Open Menu"
                     title="Open Menu">
